prevent dialog from stretching horizontally when display long error message

--- a/blueocean-dashboard/src/main/less/creation/github-enterprise.less
+++ b/blueocean-dashboard/src/main/less/creation/github-enterprise.less
@@ -12,6 +12,8 @@
 
 .github-enterprise-add-server-dialog,
 .bitbucket-server-add-server-dialog {
+    max-width: 450px;
+
     .text-name, .text-url {
         width: 100%;
     }
